Changed the ide generation to include plugin projects as runtime dependencies of the launcher project

--- a/subprojects/launcher/launcher.gradle
+++ b/subprojects/launcher/launcher.gradle
@@ -21,3 +21,12 @@ task startScripts << {
     ant.mkdir(dir: startScriptsDir)
     StartScriptsGenerator.generate(jar.archiveName, startScriptsDir, 'gradle')
 }
+
+ideaModule {
+    scopes.RUNTIME.plus << rootProject.configurations.runtime
+    scopes.RUNTIME.plus << rootProject.configurations.plugins
+}
+eclipseClasspath {
+    plusConfigurations << rootProject.configurations.runtime
+    plusConfigurations << rootProject.configurations.plugins
+}
