--- a/subprojects/docs/src/samples/userguide/tutorial/antLoadfileWithMethod/build.gradle
+++ b/subprojects/docs/src/samples/userguide/tutorial/antLoadfileWithMethod/build.gradle
@@ -1,14 +1,14 @@
 task checksum << {
-    fileList('../antChecksumFiles').each {File file ->
+    fileList('../antLoadfileResources').each {File file ->
         ant.checksum(file: file, property: "cs_$file.name")
         println "$file.name Checksum: ${ant.properties["cs_$file.name"]}"
     }
 }
 
-task length << {
-    fileList('../antChecksumFiles').each {File file ->
-        ant.length(file: file, property: "lt_$file.name")
-        println "$file.name Length: ${ant.properties["lt_$file.name"]}"
+task loadfile << {
+    fileList('../antLoadfileResources').each {File file ->
+        ant.loadfile(srcFile: file, property: file.name)
+        println "I'm fond of $file.name"
     }
 }
 
