Fix for idea generation, for running Gradle from idea.

--- a/subprojects/plugins/plugins.gradle
+++ b/subprojects/plugins/plugins.gradle
@@ -59,7 +59,7 @@ ide.dependsOn ideResources
 
 ideaModule {
     dependsOn ideResources
-    scopes.TEST.plus.add(configurations.detachedConfiguration(new DefaultSelfResolvingDependency(files(new File(ideDir, "resources/test/")))))
+    scopes.RUNTIME.plus.add(configurations.detachedConfiguration(new DefaultSelfResolvingDependency(files(new File(ideDir, "resources/test/")))))
 }
 
 eclipseClasspath {
