--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 include 'core'
+include 'core-impl'
 include 'wrapper'
 include 'launcher'
 include 'plugins'
