Depends on latest integration of the wharf

--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -59,7 +59,7 @@ dependencies {
             'org.sonatype.pmaven:pmaven-common:0.8-20100325@jar',
             'org.sonatype.pmaven:pmaven-groovy:0.8-20100325@jar',
             'org.codehaus.plexus:plexus-component-annotations:1.5.2',
-            'org.jfrog.wharf:wharf-core:1.0-rc-1'
+            'org.jfrog.wharf:wharf-core:1.0+'
 
     runtime 'net.java.dev.jna:jna:3.2.2'
 
