--- a/subprojects/core-impl/core-impl.gradle
+++ b/subprojects/core-impl/core-impl.gradle
@@ -10,7 +10,7 @@ dependencies {
     compile "org.apache.maven:maven-ant-tasks:2.1.1@jar"
     compile "org.sonatype.pmaven:pmaven-common:0.8-20100325@jar"
     compile "org.sonatype.pmaven:pmaven-groovy:0.8-20100325@jar"
-    compile "org.codehaus.plexus:plexus-component-annotations:1.5.2"
+    compile "org.codehaus.plexus:plexus-component-annotations:1.5.2@jar"
 
     testCompile libraries.junit
     testCompile project(path: ':core', configuration: 'testFixtures')
