more work on coreImpl and class loader isolation
- replaced ParentLastClassLoader with standard URLClassLoader
- added maven-ant-tasks back on 'gradleApi' class path
- moved DefaultMavenFactory from core to core-impl
- renamed MavenFactory.newXYZ to MavenFactory.createXYZ
- changed logical project name from core-impl to coreImpl
- ported (Default)MavenFactory from Groovy to Java
- made coreImpl class path handling more similar to plugins class path handling
- introduced lib/core-impl dir in the distribution

--- a/build.gradle
+++ b/build.gradle
@@ -355,6 +355,9 @@ configurations {
     plugins {
         visible = false
     }
+    coreImpl {
+        visible = false
+    }
     testRuntime {
         extendsFrom runtime
         extendsFrom plugins
@@ -364,6 +367,7 @@ configurations {
 dependencies {
     runtime runtimeProjects()
     plugins pluginProjects()
+    coreImpl project(':coreImpl')
 }
 
 evaluationDependsOn(':docs')
@@ -392,6 +396,9 @@ binDistImage = copySpec {
         from configurations.runtime
         into('plugins') {
             from configurations.plugins - configurations.runtime
+        }
+        into('core-impl') {
+            from configurations.coreImpl - configurations.runtime
         }
     }
 }
@@ -579,7 +586,7 @@ def publishedProjects() {
 }
 
 def runtimeProjects() {
-    groovyProjects() - pluginProjects() - [project(':integTest')]
+    groovyProjects() - pluginProjects() - [project(':integTest'), project(':coreImpl')]
 }
 
 def pluginProjects() {
