--- a/subprojects/launcher/launcher.gradle
+++ b/subprojects/launcher/launcher.gradle
@@ -25,8 +25,10 @@ task startScripts << {
 ideaModule {
     scopes.RUNTIME.plus << rootProject.configurations.runtime
     scopes.RUNTIME.plus << rootProject.configurations.plugins
+    scopes.RUNTIME.plus << rootProject.configurations.coreImpl
 }
 eclipseClasspath {
     plusConfigurations << rootProject.configurations.runtime
     plusConfigurations << rootProject.configurations.plugins
+    plusConfigurations << rootProject.configurations.coreImpl
 }
