--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -54,9 +54,10 @@ dependencies {
             "slide:webdavlib:2.0@jar",
             libraries.asm_all,
             'org.fusesource.jansi:jansi:1.2.1',
-            'org.jruby.ext.posix:jna-posix:1.0.3'
+            'org.jruby.ext.posix:jna-posix:1.0.3',
+            'org.jfrog.wharf:wharf-core:1.0-20110113063356'
 
-    runtime 'net.java.dev.jna:jna:3.2.2'
+            runtime 'net.java.dev.jna:jna:3.2.2'
 
     runtime libraries.log4j_to_slf4j, libraries.jcl_to_slf4j
 
