--- a/build.gradle
+++ b/build.gradle
@@ -342,7 +342,7 @@ configure(groovyProjects()) {
     eclipseClasspath {
         plusConfigurations.add(configurations.detachedConfiguration(new DefaultSelfResolvingDependency(files { sourceSets*.resources*.srcDirs*.findAll { it.isDirectory() }} )))
         whenConfigured { classpath ->
-            classpath.entries.removeAll { it instanceof org.gradle.plugins.eclipse.model.SourceFolder && it.path.endsWith('/resources') }
+            classpath.entries.removeAll { it instanceof org.gradle.plugins.ide.eclipse.model.SourceFolder && it.path.endsWith('/resources') }
         }
     }
 }
@@ -574,7 +574,7 @@ task release {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '0.9.2'
+    gradleVersion = '1.0-milestone-2'
 }
 
 def groovyProjects() {
