--- a/build.gradle
+++ b/build.gradle
@@ -95,8 +95,8 @@ allprojects {
         mavenRepo(urls: 'http://repo.gradle.org/gradle/libs')
         add(new org.apache.ivy.plugins.resolver.URLResolver()) {
             name = 'wharfRepo'
-            addIvyPattern('http://repo.jfrog.org/artifactory/gradle-ivy-local/[organisation]/[module]/ivy-[revision].xml')
-            addArtifactPattern('http://repo.jfrog.org/artifactory/gradle-ivy-local/[organisation]/[module]/jars/[artifact]-[revision].[ext]')
+            addIvyPattern('http://repo.jfrog.org/artifactory/wharf/[organisation]/[module]/ivy-[revision].xml')
+            addArtifactPattern('http://repo.jfrog.org/artifactory/wharf/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]')
         }
     }
 
