--- a/subprojects/sonar/sonar.gradle
+++ b/subprojects/sonar/sonar.gradle
@@ -41,5 +41,10 @@ sourceSets {
 }
 
 ideaModule {
-    scopes.PROVIDED.plus += configurations.provided
+    // TODO: remove everything but then-part after Gradle build has been updated to 1.0-milestone-2
+    if (scopes.PROVIDED) {
+        scopes.PROVIDED.plus += configurations.provided
+    } else {
+        scopes.COMPILE.plus += configurations.provided
+    }
 }
