--- a/performanceTest/src/templates/build.gradle
+++ b/performanceTest/src/templates/build.gradle
@@ -16,18 +16,31 @@
 <% if (subprojects.empty ) { %>
 apply plugin: 'java'
 
+<% if (projectName.contains("1")) { %>
 repositories {
-    mavenCentral()
+    mavenRepo urls: 'http://repo.gradle.org/repo1'
 }
+<% } else { %>
+repositories {
+    mavenRepo urls: 'http://repo.jfrog.org/artifactory/repo1'
+}
+<% } %>
 
 dependencies {
+    compile 'org.antlr:antlr:3.1.3'
+    compile 'org.slf4j:slf4j-api:1.6.1'
     testCompile 'junit:junit:4.8.2'
-
 }
 test {
     jvmArgs '-XX:MaxPermSize=512m', '-XX:+HeapDumpOnOutOfMemoryError'
 //    testReport = false
 }
+
+<% if (projectName.contains("1")) { %>
+dependencies {
+    testCompile 'org.spockframework:spock-core:0.5-groovy-1.7'
+}
+<% } %>
 
 <% if (groovyProject) { %>
 apply plugin: 'groovy'
