--- a/build.gradle
+++ b/build.gradle
@@ -511,10 +511,13 @@ uploadDists {
     dependsOn testedDists
     uploadDescriptor = false
     doFirst {
-        org.apache.ivy.util.url.CredentialsStore.INSTANCE.addCredentials('Artifactory Realm', 'gradle.artifactoryonline.com', artifactoryUserName, artifactoryUserPassword)
-        repositories.add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-            name = 'gradleReleases'
-            addArtifactPattern("${version.distributionUrl}/[artifact]-[revision](-[classifier]).[ext]" as String)
+        repositories {
+            ivy {
+                name = 'gradleReleases'
+                artifactPattern "${version.distributionUrl}/[artifact]-[revision](-[classifier]).[ext]"
+                userName = artifactoryUserName
+                password = artifactoryUserPassword
+            }
         }
     }
 }
