--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -50,10 +50,13 @@ uploadArchives {
     dependsOn generatePom
     uploadDescriptor = false
     doFirst {
-        org.apache.ivy.util.url.CredentialsStore.INSTANCE.addCredentials('Artifactory Realm', 'gradle.artifactoryonline.com', artifactoryUserName, artifactoryUserPassword)
-        repositories.add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-            name = 'gradleLibs'
-            addArtifactPattern("${version.libsUrl}/${project.group.replaceAll('\\.', '/')}/${archivesBaseName}/[revision]/[artifact]-[revision](-[classifier]).[ext]" as String)
+        repositories {
+            ivy {
+                name = 'gradleLibs'
+                artifactPattern "${version.libsUrl}/${project.group.replaceAll('\\.', '/')}/${archivesBaseName}/[revision]/[artifact]-[revision](-[classifier]).[ext]"
+                userName = artifactoryUserName
+                password = artifactoryUserPassword
+            }
         }
     }
 }
