- Fixed case where duplicate source directories were added to eclipse project when the java source directory was also configured as a resource directory. - Changed SourceSet.allJava, allGroovy, allScala and allSource to return a SourceDirectorySet instead of a generic FileTree. Removed code from ide plugins which reached into the implementation types for these properties, and use the api instead. This will later allow us to have per-directory include/excludes, and allow arbitrary file collections to be added to source sets.

--- a/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/eclipse/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
+++ b/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/eclipse/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
@@ -94,6 +94,8 @@ void compareXmlWithIgnoringOrder(String expectedXml, String actualXml) {
     try {
         XMLAssert.assertXMLEqual(diff, true)
     } catch (AssertionFailedError error) {
+        println "EXPECTED:\n${expectedXml}"
+        println "ACTUAL:\n${actualXml}"
         throw new ComparisonFailure("Unexpected content for generated file: ${error.message}", expectedXml, actualXml).initCause(error)
     }
 }
