first implementation of maven publisher service

--- a/subprojects/maven/maven.gradle
+++ b/subprojects/maven/maven.gradle
@@ -18,6 +18,10 @@ aetherVersion = "1.11"
 mavenVersion = "3.0.2"
 wagonVersion = "1.0-beta-7"
 
+configurations {
+    compile.exclude module: "netty"
+}
+
 dependencies {
     groovy libraries.groovy_depends
 
@@ -31,8 +35,9 @@ dependencies {
     compile "org.sonatype.aether:aether-connector-file:$aetherVersion"
     compile "org.sonatype.aether:aether-connector-asynchttpclient:$aetherVersion"
     compile "org.apache.maven:maven-aether-provider:$mavenVersion"
-    compile "org.apache.maven.wagon:wagon-ssh:$wagonVersion"
-    compile "org.apache.maven:maven-settings-builder:$mavenVersion"
+    //compile "org.sonatype.aether:aether-connector-wagon:$aetherVersion"
+    //compile "org.apache.maven.wagon:wagon-ssh:$wagonVersion"
+    //compile "org.apache.maven:maven-settings-builder:$mavenVersion"
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
