--- a/subprojects/maven/maven.gradle
+++ b/subprojects/maven/maven.gradle
@@ -35,9 +35,9 @@ dependencies {
     compile "org.sonatype.aether:aether-connector-file:$aetherVersion"
     compile "org.sonatype.aether:aether-connector-asynchttpclient:$aetherVersion"
     compile "org.apache.maven:maven-aether-provider:$mavenVersion"
-    //compile "org.sonatype.aether:aether-connector-wagon:$aetherVersion"
-    //compile "org.apache.maven.wagon:wagon-ssh:$wagonVersion"
-    //compile "org.apache.maven:maven-settings-builder:$mavenVersion"
+    compile "org.sonatype.aether:aether-connector-wagon:$aetherVersion"
+    compile "org.apache.maven.wagon:wagon-ssh:$wagonVersion"
+    compile "org.apache.maven:maven-settings-builder:$mavenVersion"
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
