GRADLE-1338 - Moved the tooling api provider implementation from toolingApi to launcher project, so  that: - The tooling api project contains only the stuff which runs in the client application. - The launcher project is the only project which knows how to set up and run a gradle instance.

--- a/subprojects/launcher/launcher.gradle
+++ b/subprojects/launcher/launcher.gradle
@@ -5,6 +5,8 @@ dependencies {
 
     compile project(':core')
     compile project(':ui')
+    compile project(':toolingApi')
+    compile project(':ide')
 
     compile libraries.slf4j_api
 
