GRADLE-1338 - Moved classes which map from internal ide model -> tooling api model from launcher project to ide project

--- a/subprojects/ide/ide.gradle
+++ b/subprojects/ide/ide.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile project(':scala')
     compile project(':core')
     compile project(':plugins')
+    compile project(':toolingApi')
     compile libraries.commons_io
     compile libraries.slf4j_api, libraries.jaxen
     compile 'dom4j:dom4j:1.6.1@jar'
