GRADLE-1338 - Fixed problem introduced in previous refactoring, where the build failure is reported twice when using the daemon.

--- a/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/buildSrc/build.gradle
+++ b/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/buildSrc/build.gradle
@@ -1,5 +1,5 @@
-println 'buildSrc quiet'
-logger.info 'buildSrc info'
+println 'main buildSrc quiet'
+logger.info 'main buildSrc info'
 
 task classes << {}
 
