--- a/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/nestedBuild/buildSrc/build.gradle
+++ b/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/nestedBuild/buildSrc/build.gradle
@@ -1,5 +1,5 @@
-println 'nestedBuild/buildSrc quiet'
-logger.info 'nestedBuild/buildSrc info'
+println 'nestedBuild buildSrc quiet'
+logger.info 'nestedBuild buildSrc info'
 
 task classes << { }
 
