--- a/build.gradle
+++ b/build.gradle
@@ -514,21 +514,21 @@ task installAll(type: Install) {
 
 uploadDists {
     dependsOn testedDists
-    uploadDescriptor = false
-    doFirst {
-        org.apache.ivy.util.url.CredentialsStore.INSTANCE.addCredentials('Artifactory Realm', 'repo.gradle.org', artifactoryUserName, artifactoryUserPassword)
-        repositories.add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-            name = 'gradleReleases'
-            addArtifactPattern("${version.distributionUrl}/[artifact]-[revision](-[classifier]).[ext]" as String)
+    uploadDescriptor = true
+}
+
+subprojects {
+    if (tasks.findByName('buildInfo')) {
+        buildInfo {
+            artifactName = "gradle-${project.name}"
         }
     }
 }
 
-gradle.taskGraph.whenReady {graph ->
-    if (graph.hasTask(uploadDists) || graph.hasTask(uploadArchives)) {
-        // check properties defined and fail early
-        artifactoryUserName
-        artifactoryUserPassword
+if (tasks.findByName('buildInfo')) {
+    buildInfo {
+        dependsOn build
+        configuration = configurations.dists
     }
 }
 
